# castavote

./: CMakeLists.txt
etc/approot/: text.xml
etc/style/: paranal_common.css  paranal_light.css
include/: app_generator.h  common.h  file_ops.h  master_page.h  options.h  plain_text_processor.h  postgresql.h  preferences.h  search_page.h  shared_resources.h  transfers.h  voting_page.h  warehouse.h  writable_content_db.h
src/: app_generator.cpp  main.cpp  search_page.cpp
src_master/: app_generator.cpp  master_page.cpp
src_voting/: app_generator.cpp  events.cpp.sample  file_ops.cpp  shared_resources.cpp  voting_page.cpp
